--- a/client/pages/Users/UserList.html
+++ b/client/pages/Users/UserList.html
@@ -34,9 +34,9 @@
       <td>{{profile.fname}}</td>
       <td>{{profile.lname}}</td>
       <td>{{profile.local}}</td>
-      <td>{{userDept}}</td>
+      <td>{{roles.[1]}}</td>
       <td>{{dateFormat}}</td>
-      <td>{{userType}}
+      <td>{{roles.[0]}}
         {{#if currentEdit}}
           <!-- EDIT USER -->
           {{> EditUser}}
