--- a/client/pages/Users/Users.html
+++ b/client/pages/Users/Users.html
@@ -1,4 +1,7 @@
 <template name="Users">
-    {{> CreateUser}}
-    {{> UserList}}
+    <div class="mt-5">
+            {{> CreateUser}}
+            {{> UserList}}
+    </div>
+    
 </template>
