--- a/client/pages/Login/Login.html
+++ b/client/pages/Login/Login.html
@@ -1,6 +1,6 @@
 <template name="Login">
   <br>
-  <div class="row">
+  <div class="row mt-5">
     <div class="col-md-4 offset-md-4">
       <div class="card">
         <div class="card-header" role="tab" id="headingOne">
