--- a/client/pages/Map/Maps.html
+++ b/client/pages/Map/Maps.html
@@ -1,9 +1,35 @@
 <template name="Maps">
-  <div class="map-container">
+  <style>
+    .map-container {
+      width: 100%;
+      max-width: 100%;
+      height: 500px;
+    }  
+    #legend {
+      font-family: Arial, sans-serif;
+      background: #fff;
+      padding: 10px;
+      margin: 10px;
+      border: 3px solid #000;
+    }
+    #legend h3 {
+      margin-top: 0;
+    }
+    #legend img {
+      vertical-align: middle;
+    }
+  </style>
+
+  <div class="map-container mt-5">
     {{#unless geolocationError}}
       {{> googleMap name="map" options=mapOptions}}
+      <div id="legend"><h3>Legend</h3></div>
     {{else}}
       Geolocation failed: {{geolocationError}}
     {{/unless}}
   </div>
+  <script>
+    
+        
+  </script>
 </template>
