--- a/client/pages/Users/CreateUser.html
+++ b/client/pages/Users/CreateUser.html
@@ -43,7 +43,7 @@
                     <select name="dept" class="form-control" id="dept">
                       <option value="Hospital">Hospital</option>
                       <option value="Police">Police</option>
-                      <option value="Fire Protection">Fire Protection</option>
+                      <option value="Fire Unit">Fire Protection</option>
                     </select>
                   </div>
                   <div class="form-group col-md-6">
