--- a/client/pages/Users/EditUser.html
+++ b/client/pages/Users/EditUser.html
@@ -34,6 +34,9 @@
         <div class="form-group">
           <button type="submit" class="btn btn-outline-primary btn-block">Update</button>
         </div>
+        <div class="form-group">
+          <button class="btn btn-outline-warning btn-block rstPassword">Reset Password</button>
+        </div>
       </div>
     </form>
   </div>
