--- a/client/pages/Users/CreateUser.html
+++ b/client/pages/Users/CreateUser.html
@@ -17,20 +17,22 @@
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="fname">*First Name</label>
-                    <input type="text" class="form-control" id="fname" name="fname" aria-describedby="fnameHelp" placeholder="Enter First Name">
+                    <input type="text" class="form-control" id="fname" name="fname" aria-describedby="fnameHelp"
+                      placeholder="Enter First Name">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="lname">*Last Name</label>
-                    <input type="text" class="form-control" name="lname" id="lname" aria-describedby="lnameHelp" placeholder="Enter Last Name">
+                    <input type="text" class="form-control" name="lname" id="lname" aria-describedby="lnameHelp"
+                      placeholder="Enter Last Name">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="email">*Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+                      placeholder="Enter email">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="local">*Locality</label>
-                    <input type="text" class="form-control" name="local" id="local" aria-describedby="textHelp" placeholder="Enter Locale" value="{{UserLocale}}" disabled>
-                    <!-- <select name="local" class="form-control" id="local">
+                    <select name="local" class="form-control" id="local">
                       <option title="Agno" value="Agno">Agno</option>
                       <option title="Aguilar" value="Aguilar">Aguilar</option>
                       <option title="Alaminos" value="Alaminos">Alaminos</option>
@@ -47,7 +49,7 @@
                       <option title="Bugallon" value="Bugallon">Bugallon</option>
                       <option title="Burgos" value="Burgos">Burgos</option>
                       <option title="Calasiao" value="Calasiao">Calasiao</option>
-                      <option title="Dagupan City" value="Dagupan City">Dagupan City</option>
+                      <option title="Dagupan" value="Dagupan">Dagupan</option>
                       <option title="Dasol" value="Dasol">Dasol</option>
                       <option title="Infanta" value="Infanta">Infanta</option>
                       <option title="Labrador" value="Labrador">Labrador</option>
@@ -62,7 +64,7 @@
                       <option title="Natividad" value="Natividad">Natividad</option>
                       <option title="Pozorrubio" value="Pozorrubio">Pozorrubio</option>
                       <option title="Rosales" value="Rosales">Rosales</option>
-                      <option title="San Carlos City" value="San Carlos City">San Carlos City</option>
+                      <option title="San Carlos" value="San Carlos">San Carlos</option>
                       <option title="San Fabian" value="San Fabian">San Fabian</option>
                       <option title="San Jacinto" value="San Jacinto">San Jacinto</option>
                       <option title="San Manuel" value="San Manuel">San Manuel</option>
@@ -77,15 +79,17 @@
                       <option title="Umingan" value="Umingan">Umingan</option>
                       <option title="Urbiztondo" value="Urbiztondo">Urbiztondo</option>
                       <option title="Villasis" value="Villasis">Villasis</option>
-                    </select> -->
+                    </select>
                   </div>
                   <div class="form-group col-md-6">
                     <label for="password">*Password</label>
-                    <input type="password" class="form-control" id="password" name="password" aria-describedby="passwordHelp" placeholder="Password">
+                    <input type="password" class="form-control" id="password" name="password"
+                      aria-describedby="passwordHelp" placeholder="Password">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="repassword">*Confirm Password</label>
-                    <input type="password" class="form-control" id="repassword" name="repassword" aria-describedby="repasswordHelp" placeholder="Confirm Password">
+                    <input type="password" class="form-control" id="repassword" name="repassword"
+                      aria-describedby="repasswordHelp" placeholder="Confirm Password">
                   </div>
                   <div class="form-group col-md-6">
                     <label for="dept">*Department</label>
@@ -106,7 +110,7 @@
                     </select>
                   </div>
                   <div class="form-group col-md-10 offset-md-1">
-                    <button type="submit" class="btn btn-outline-primary btn-block">Create</button>
+                    <button type="submit" class="btn btn-outline-warning btn-block">Create</button>
                   </div>
                 </div>
               </form>
