--- a/client/pages/Users/EditUser.html
+++ b/client/pages/Users/EditUser.html
@@ -15,7 +15,7 @@
           <input type="email" value="{{userEmail}}" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
         <div class="form-group">
-          <select name="local" class="form-control" id="local">
+          <select name="local" class="form-control" id="local" disabled>
             <option title="Agno" value="Agno" selected="{{UserLocale 'Agno'}}">Agno</option>
             <option title="Aguilar" value="Aguilar" selected="{{UserLocale 'Aguilar'}}">Aguilar</option>
             <option title="Alaminos" value="Alaminos" selected="{{UserLocale 'Alaminos'}}">Alaminos</option>
