--- a/client/pages/Map/Maps.html
+++ b/client/pages/Map/Maps.html
@@ -2,34 +2,44 @@
   <style>
     .map-container {
       width: 100%;
-      max-width: 100%;
-      height: 500px;
-    }  
+      max-width: 95%;
+      height: 525px;
+    }
+
     #legend {
       font-family: Arial, sans-serif;
       background: #fff;
-      padding: 10px;
+      padding: 5px;
       margin: 10px;
-      border: 3px solid #000;
+      border: 2px solid #000;
     }
+
     #legend h3 {
       margin-top: 0;
     }
+
     #legend img {
       vertical-align: middle;
     }
+
+    .gm-style-iw {
+      max-height: 350px !important;
+      overflow: auto !important;
+    }
   </style>
 
-  <div class="map-container mt-5">
+  <div class="map-container mt-4">
+    {{#if currentUser}}
     {{#unless geolocationError}}
-      {{> googleMap name="map" options=mapOptions}}
-      <div id="legend"><h3>Legend</h3></div>
+    {{> googleMap name="map" options=mapOptions}}
+    <div id="legend">
+      <h3>Legend</h3>
+    </div>
     {{else}}
-      Geolocation failed: {{geolocationError}}
+    Geolocation failed: {{geolocationError}}
     {{/unless}}
+    {{else}}
+    <img class="text-center" src="/loading.gif" alt="Loading">
+    {{/if}}
   </div>
-  <script>
-    
-        
-  </script>
 </template>
