--- a/client/pages/RescueTeam/Maps.html
+++ b/client/pages/RescueTeam/Maps.html
@@ -1,61 +1,66 @@
 <template name="RescueMaps">
-    <style>
-      .map-container {
-        width: 100%;
-        max-width: 100%;
-        height: 500px;
-        margin-top: 65px;
-        padding: 5px;
-      }  
-      #legend {
-        font-family: Arial, sans-serif;
-        background: #fff;
-        padding: 10px;
-        margin: 10px;
-        border: 3px solid #000;
-      }
-      #legend h3 {
-        margin-top: 0;
-      }
-      #legend img {
-        vertical-align: middle;
-      }
-
-      #goCenterUI, #setCenterUI {
-        background-color: #fff;
-        border: 2px solid #fff;
-        border-radius: 3px;
-        box-shadow: 0 2px 6px rgba(0,0,0,.3);
-        cursor: pointer;
-        float: left;
-        margin-bottom: 22px;
-        text-align: center;
-      }
-      #goCenterText, #setCenterText {
-        color: rgb(25,25,25);
-        font-family: Roboto,Arial,sans-serif;
-        font-size: 15px;
-        line-height: 25px;
-        padding-left: 5px;
-        padding-right: 5px;
-      }
-      #setCenterUI {
-        margin-left: 12px;
-      }
-    </style>
-
-    <div class="row">
-      <div class="col-md-12">
-        <div class="map-container">
-          {{#unless geolocationError}}
-            {{> googleMap name="map" options=mapOptions}}
-            <!-- <div id="legend"><h3>Legend</h3></div> -->
-          {{else}}
-            Geolocation failed: {{geolocationError}}
-          {{/unless}}
-        </div>
-      </div>
-
+  <style>
+    .map-container {
+      width: 100%;
+      max-width: 100%;
+      height: 500px;
+      margin-top: 65px;
+      padding: 5px;
+    }  
+    #legend {
+      font-family: Arial, sans-serif;
+      background: #fff;
+      padding: 10px;
+      margin: 10px;
+      border: 3px solid #000;
+    }
+    #legend h3 {
+      margin-top: 0;
+    }
+    #legend img {
+      vertical-align: middle;
+    }
+    .gm-style-mtc, .gm-svpc {
+      display: none;
+    }
+    .gm-style-iw {
+      max-height: 300px !important;
+      overflow: auto !important;
+    }
+    #goCenterUI, #setCenterUI {
+      background-color: #fff;
+      border: 2px solid #fff;
+      border-radius: 3px;
+      box-shadow: 0 2px 6px rgba(0,0,0,.3);
+      cursor: pointer;
+      float: left;
+      margin-bottom: 22px;
+      text-align: center;
+    }
+    #goCenterText, #setCenterText {
+      color: rgb(25,25,25);
+      font-family: Roboto,Arial,sans-serif;
+      font-size: 15px;
+      line-height: 25px;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+    #setCenterUI {
+      margin-left: 12px;
+    }
+  </style>
+    <div class="map-container">
+      {{#if currentUser}}
+        {{#unless geolocationError}}
+          {{> googleMap name="map" options=mapOptions}}
+          <!-- <div id="legend"><h3>Legend</h3></div> -->
+        {{else}}
+          Geolocation failed: {{geolocationError}}
+        {{/unless}}
+      {{else}}
+        <img class="text-center" src="/loading.gif" alt="Loading">
+      {{/if}}
     </div>
-  </template>
+
+</template>
   
