--- a/client/pages/Users/EditUser.html
+++ b/client/pages/Users/EditUser.html
@@ -6,13 +6,16 @@
     <form class="edit-user-form">
       <div class="container">
         <div class="form-group">
-          <input type="text" value="{{editMode.profile.fname}}" class="form-control" id="fname" name="fname" aria-describedby="fnameHelp" placeholder="Enter First Name">
+          <input type="text" value="{{editMode.profile.fname}}" class="form-control" id="fname" name="fname"
+            aria-describedby="fnameHelp" placeholder="Enter First Name">
         </div>
         <div class="form-group">
-          <input type="text" value="{{editMode.profile.lname}}" class="form-control" name="lname" id="lname" aria-describedby="lnameHelp" placeholder="Enter Last Name">
+          <input type="text" value="{{editMode.profile.lname}}" class="form-control" name="lname" id="lname"
+            aria-describedby="lnameHelp" placeholder="Enter Last Name">
         </div>
         <div class="form-group">
-          <input type="email" value="{{userEmail}}" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+          <input type="email" value="{{userEmail}}" class="form-control" name="email" id="email"
+            aria-describedby="emailHelp" placeholder="Enter email">
         </div>
         <div class="form-group">
           <select name="local" class="form-control" id="local" disabled>
@@ -32,7 +35,7 @@
             <option title="Bugallon" value="Bugallon" selected="{{UserLocale 'Bugallon'}}">Bugallon</option>
             <option title="Burgos" value="Burgos" selected="{{UserLocale 'Burgos'}}">Burgos</option>
             <option title="Calasiao" value="Calasiao" selected="{{UserLocale 'Calasiao'}}">Calasiao</option>
-            <option title="Dagupan City" value="Dagupan City" selected="{{UserLocale 'Dagupan City'}}">Dagupan City</option>
+            <option title="Dagupan" value="Dagupan" selected="{{UserLocale 'Dagupan'}}">Dagupan</option>
             <option title="Dasol" value="Dasol" selected="{{UserLocale 'Dasol'}}">Dasol</option>
             <option title="Infanta" value="Infanta" selected="{{UserLocale 'Infanta'}}">Infanta</option>
             <option title="Labrador" value="Labrador" selected="{{UserLocale 'Labrador'}}">Labrador</option>
@@ -47,13 +50,14 @@
             <option title="Natividad" value="Natividad" selected="{{UserLocale 'Natividad'}}">Natividad</option>
             <option title="Pozorrubio" value="Pozorrubio" selected="{{UserLocale 'Pozorrubio'}}">Pozorrubio</option>
             <option title="Rosales" value="Rosales" selected="{{UserLocale 'Rosales'}}">Rosales</option>
-            <option title="San Carlos City" value="San Carlos City" selected="{{UserLocale 'San Carlos City'}}">San Carlos City</option>
+            <option title="San Carlos" value="San Carlos" selected="{{UserLocale 'San Carlos'}}">San Carlos</option>
             <option title="San Fabian" value="San Fabian" selected="{{UserLocale 'San Fabian'}}">San Fabian</option>
             <option title="San Jacinto" value="San Jacinto" selected="{{UserLocale 'San Jacinto'}}">San Jacinto</option>
             <option title="San Manuel" value="San Manuel" selected="{{UserLocale 'San Manuel'}}">San Manuel</option>
             <option title="San Nicolas" value="San Nicolas" selected="{{UserLocale 'San Nicolas'}}">San Nicolas</option>
             <option title="San Quintin" value="San Quintin" selected="{{UserLocale 'San Quintin'}}">San Quintin</option>
-            <option title="Santa Barbara" value="Santa Barbara" selected="{{UserLocale 'Santa Barbara'}}">Santa Barbara</option>
+            <option title="Santa Barbara" value="Santa Barbara" selected="{{UserLocale 'Santa Barbara'}}">Santa Barbara
+            </option>
             <option title="Santa Maria" value="Santa Maria" selected="{{UserLocale 'Santa Maria'}}">Santa Maria</option>
             <option title="Santa Tomas" value="Santa Tomas" selected="{{UserLocale 'Santa Tomas'}}">Santa Tomas</option>
             <option title="Sison" value="Sison" selected="{{UserLocale 'Sison'}}">Sison</option>
