--- a/client/pages/MOBILE_CITIZEN/mcitizen.html
+++ b/client/pages/MOBILE_CITIZEN/mcitizen.html
@@ -1,5 +1,5 @@
 <template name="mcitizen">
-  <div class="container">
+  <div class="container pt-2">
     {{#if currentUser}}
     <table class="table">
       <tbody>
