--- a/client/pages/Login/Login.html
+++ b/client/pages/Login/Login.html
@@ -1,24 +1,38 @@
 <template name="Login">
-  <br>
+  <br />
   <div class="row mt-5">
     <div class="col-md-4 offset-md-4">
       <div class="card">
         <div class="card-body">
-          <img src="/login.png" alt="login" height="50%" width="90%">
+          <img src="/newLogo.png" alt="login" height="50%" width="90%" />
           <form class="login-form">
             <div class="container">
               <div class="form-group">
                 <label for="email">Email address</label>
-                <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
-                  placeholder="Enter email">
+                <input
+                  type="email"
+                  class="form-control"
+                  name="email"
+                  id="email"
+                  aria-describedby="emailHelp"
+                  placeholder="Enter email"
+                />
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password"
-                  aria-describedby="passwordHelp" placeholder="Password">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  aria-describedby="passwordHelp"
+                  placeholder="Password"
+                />
               </div>
               <div class="form-group">
-                <button type="submit" class="btn btn-outline-warning btn-block">Login</button>
+                <button type="submit" class="btn btn-outline-warning btn-block">
+                  Login
+                </button>
               </div>
             </div>
           </form>
